// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButtons StyledDeleteButton when isHovered prop is set should match expected styles 1`] = `
.c0 {
  background: transparent;
  border: none;
  padding: 0;
}

.c0:focus {
  color: rgba(0,0,0,0.9);
  background-color: transparent;
  outline: solid 3px #FFB500;
  z-index: 1;
}

.c0:hover {
  cursor: pointer;
}

.c0::-moz-focus-inner {
  border: none;
}

.c0 .c2 {
  position: relative;
}

.c0 .c2:focus {
  border: none;
}

.c1.c1 {
  cursor: pointer;
  border: 1px solid #CCD6DB;
  margin-left: 8px;
  margin-bottom: 8px;
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  padding: px;
  background-color: #9F2D3F;
  color: #FFFFFF;
}

.c1.c1 .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: #C7384F;
}

.c1.c1 .c2 {
  color: #FFFFFF;
}

<button
  className="c0 c1"
  onClick={[Function]}
  onKeyDown={[Function]}
  type="button"
/>
`;

exports[`ActionButtons StyledEditAction when isHovered prop is set should match expected styles 1`] = `
.c0 {
  display: inline-block;
}

.c0 a,
.c0 button {
  font-size: 14px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #008200;
  display: inline-block;
}

.c0 a .c2,
.c0 button .c2 {
  position: relative;
  vertical-align: middle;
  margin-right: 0;
}

.c0 a:hover,
.c0 button:hover {
  cursor: pointer;
  color: #006300;
}

.c0 a:focus,
.c0 button:focus {
  color: rgba(0,0,0,0.9);
  background-color: #FFDA80;
  outline: none;
}

.c0 button {
  background-color: transparent;
  border: none;
  padding: 0;
}

.c1.c1 > a,
.c1.c1 button {
  cursor: pointer;
  border: 1px solid #CCD6DB;
  margin-left: 8px;
  margin-bottom: 8px;
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  padding: px;
  background-color: #006300;
  color: #FFFFFF;
}

.c1.c1 > a .c2,
.c1.c1 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: #008200;
}

.c1.c1 > a .c2,
.c1.c1 button .c2 {
  color: #FFFFFF;
}

.c1 .carbon-link__content {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  position: absolute;
}

<span
  className="c0 c1"
  data-component="link"
  disabled={false}
>
  <a
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    <span
      className="carbon-link__content"
    />
  </a>
</span>
`;

exports[`ActionButtons StyledUndoButton when isHovered prop is set should match expected styles 1`] = `
.c0 {
  background: transparent;
  border: none;
  padding: 0;
}

.c0:focus {
  color: rgba(0,0,0,0.9);
  background-color: transparent;
  outline: solid 3px #FFB500;
  z-index: 1;
}

.c0:hover {
  cursor: pointer;
}

.c0::-moz-focus-inner {
  border: none;
}

.c0 .c2 {
  position: relative;
}

.c0 .c2:focus {
  border: none;
}

.c1.c1 {
  cursor: pointer;
  border: 1px solid #CCD6DB;
  margin-left: 8px;
  margin-bottom: 8px;
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  padding: px;
  background-color: #006300;
  color: #FFFFFF;
}

.c1.c1 .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: #008200;
}

.c1.c1 .c2 {
  color: #FFFFFF;
}

<button
  className="c0 c1"
  onClick={[Function]}
  onKeyDown={[Function]}
  type="button"
/>
`;

exports[`StyledActionsContainer when internalEditButton prop is set should have expected styles 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  right: 2px;
  top: 2px;
  z-index: 10;
}

<div
  className="c0"
/>
`;

exports[`StyledBlock should match expected styles 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  border: 1px solid #CCD6DB;
  outline: none;
}

<div
  className="c0"
/>
`;

exports[`StyledFooter should match expected styles 1`] = `
.c0 {
  background-color: #F2F5F6;
  box-shadow: inset 0px 1px 1px 0 rgba(0,0,0,0.1);
  color: rgba(0,0,0,0.9);
}

<div
  className="c0"
/>
`;
